# tortoise-cli

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
examples/: __init__.py  models.py
tests/: test_cli.py  test_utils.py
tortoise_cli/: __init__.py  cli.py  utils.py
