[project]
name = "tortoise-cli"
version = "0.1.2"
description = "A cli tool for tortoise-orm, build on top of click and ptpython."
authors = [{name="long2ice", email="long2ice@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
keywords = ["tortoise", "shell", "cli", "tortoise-orm"]
include = ["CHANGELOG.md", "LICENSE", "README.md"]
requires-python = ">=3.9"
dependencies = [
    "tortoise-orm",
    "click",
    "ptpython",
    "tomlkit",
]

[project.urls]
homepage = "https://github.com/tortoise/tortoise-cli"
repository = "https://github.com/tortoise/tortoise-cli.git"
documentation = "https://github.com/tortoise/tortoise-cli"

[tool.poetry]
packages = [
    { include = "tortoise_cli"}
]

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-sugar = "*"

[tool.poetry.group.dev.dependencies]
isort = "*"
flake8 = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
tortoise-cli = "tortoise_cli.cli:main"

[tool.aerich]
tortoise_orm = "examples.TORTOISE_ORM"
