[project]
name = "tortoise-cli"
version = "0.2.0"
description = "A cli tool for tortoise-orm, build on top of click and ptpython."
authors = [{name="long2ice", email="long2ice@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
keywords = ["tortoise", "shell", "cli", "tortoise-orm"]
include = ["CHANGELOG.md", "LICENSE", "README.md"]
requires-python = ">=3.9"
dependencies = [
    "tortoise-orm",
    "click",
    "ptpython",
    "tomlkit (>=0.11.4,<1.0.0); python_version < '3.11'",
]

[project.urls]
homepage = "https://github.com/tortoise/tortoise-cli"
repository = "https://github.com/tortoise/tortoise-cli.git"
documentation = "https://github.com/tortoise/tortoise-cli"

[tool.poetry]
packages = [
    { include = "tortoise_cli"}
]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-xdist = "^3.7.0"
pytest-sugar = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
tortoise-cli = "tortoise_cli.cli:main"

[tool.aerich]
tortoise_orm = "examples.TORTOISE_ORM"

[tool.mypy]
pretty = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
